[package]
name = "oauth2"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Florin Lipan <florinlipan@gmail.com>", "David A. Ramos <ramos@cs.stanford.edu>"]
version = "4.1.1"
license = "MIT/Apache-2.0"
description = "An extensible, strongly-typed implementation of OAuth2"
repository = "https://github.com/ramosbugs/oauth2-rs"
edition = "2018"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["reqwest", "rustls-tls"]
pkce-plain = []
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
base64 = "0.13.0"
thiserror = "1.0.26"
http = "0.2.1"
rand = "0.7.3"
reqwest = { version = "0.10.10", optional = true, default-features = false, features = ["blocking"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.9.5"
ureq = { version = "2", optional = true }
url = { version = "2.2.2", features = ["serde"] }
chrono = { version = "0.4.19", default-features = false, features = ["clock", "serde", "std"] }
serde_path_to_error = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
curl = { version = "0.4.0", optional = true }

[dev-dependencies]
hex = "0.4.3"
hmac = "0.10.1"
uuid = { version = "0.8.1", features = ["v4"] }
anyhow = "1.0.41"
tokio = { version = "0.2.24", features = ["full"] }
async-std = "1.6.3"
